--- a/html/slider-to-label.html
+++ b/html/slider-to-label.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="app.css">
 
     <script src="jquery.js"></script> 
-    <script src="Bacon.js"></script> 
-    <script src="d3.js"></script> 
-    <script src="bacon-viz.js"></script> 
+    <!--<script src="Bacon.js"></script> -->
+    <!--<script src="d3.js"></script> -->
+    <!--<script src="bacon-viz.js"></script> -->
 
     <script src="slider-to-label.js"></script> 
   </head>
