add button stream

--- a/html/visualization.html
+++ b/html/visualization.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="app.css">
   </head>
   <body>
+    <button id="click-me">click me!</button>
     <main>
     </main>
   <script src="visualization.js"></script> 
