--- a/html/visualization.html
+++ b/html/visualization.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <button id="click-me">click me!</button>
-    <main>
-    </main>
+    <section id="marbles-container"/>
   <script src="visualization.js"></script> 
   </body>
 </html>
