visualize observables using Marbelous

--- a/html/slider-to-label.html
+++ b/html/slider-to-label.html
@@ -4,8 +4,10 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="marbelous.css">
 
     <script src="jquery.js"></script> 
+    <script src="marbelous.js"></script> 
     <!--<script src="Bacon.js"></script> -->
     <!--<script src="d3.js"></script> -->
     <!--<script src="bacon-viz.js"></script> -->
@@ -23,11 +25,7 @@
         <input type="range" min="0" max="1" step="0.001">
         <span class="label">____</span>
       </section>
-      <article class="stream-visualizations">
-        <!--<h1>stream visualizations</h1>-->
-        <section class="streams">
-        </section>
-      </article>
+      <section id="marbles-container"/>
     </main>
     <script src="slider-to-label.js"></script> 
   </body>
