working slider-to-label

--- a/html/slider-to-label.html
+++ b/html/slider-to-label.html
@@ -2,15 +2,12 @@
 <meta charset="utf-8">
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="app.css">
     <link rel="stylesheet" type="text/css" href="marbelous.css">
 
     <script src="jquery.js"></script> 
     <script src="marbelous.js"></script> 
-    <!--<script src="Bacon.js"></script> -->
-    <!--<script src="d3.js"></script> -->
-    <!--<script src="bacon-viz.js"></script> -->
 
   </head>
   <body>
