--- a/html/summing-two-sliders.html
+++ b/html/summing-two-sliders.html
@@ -2,15 +2,12 @@
 <meta charset="utf-8">
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="marbelous.css">
 
     <script src="jquery.js"></script> 
-    <script src="Bacon.js"></script> 
-    <script src="d3.js"></script> 
-    <script src="bacon-viz.js"></script> 
-
-    <script src="summing-two-sliders.js"></script> 
+    <script src="marbelous.js"></script> 
   </head>
   <body>
     <header>
@@ -33,12 +30,9 @@
           <span class="notation">=</span><span class="label">__</span>
         </section>
       </article>
-      <article class="stream-visualizations">
-        <!--<h1>stream visualizations</h1>-->
-        <section class="streams">
-        </section>
-      </article>
+      <article id="marbles-container"/>
     </main>
+    <script src="summing-two-sliders.js"></script> 
   </body>
 </html>
 
