--- a/html/summing-two-sliders.html
+++ b/html/summing-two-sliders.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
   <head>
-    <!--<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>-->
+    <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="app.css">
     <link rel="stylesheet" type="text/css" href="marbelous.css">
 
