initial implementation of min-max

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
       <h1>Examples</h1>
       <ul>
         <li><a href="slider-to-label.html">Slider & Label</a></li>
+        <li><a href="min-max.html">Min & Max</a></li>
         <li><a href="summing-two-sliders.html">Summing two sliders</a></li>
       </ul>
     </section>
