--- a/html/min-max.html
+++ b/html/min-max.html
@@ -22,6 +22,7 @@
         <input type="range" min="0" max="1" step="0.001">
         <span class="label">____</span>
       </section>
+      <h1>range:</h1>
       <section id="number-line" class="number-line"></section>
       <section id="marbles-container"></section>
     </main>
